--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -2,3 +2,5 @@
 
 <p> name: <%= @todo.name %> </p>
 <p> description: <%= @todo.description %> </p>
+<%= link_to "Edit this todo", edit_todo_path(@todo)  %> | 
+<%= link_to "Back to todos listing", todos_path %>
